--- a/src/app/Pages/login/login.component.css
+++ b/src/app/Pages/login/login.component.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content:center ;
     background: rgb(233, 232, 232);
-    height: 40rem;
+    height: 39rem;
     width: 30rem;
     border-radius: 10px;
 }
@@ -18,6 +18,7 @@
 #titleLogin{
     font-size: 20px;
     margin: 2rem 0rem 3rem 0rem;
+    font-weight: bold;
 }
 #logoLadrillera{
     margin: 1rem 0rem 3rem 0rem;
@@ -26,15 +27,22 @@
     outline: none;
     border-width: 0 0 2px;
     border-color: rgb(209, 209, 209);
-    background: rgb(233, 232, 232);
+    background-color: transparent;
     border-radius: 0px;
     color:rgb(160, 160, 160) ;
-   
     font-size: 20px;
+    font-weight: bolder;
 }
 .form-control:focus{
     box-shadow: none;
 }
 #forgotPassword{
     text-align: left;
+    font-weight: bold;
+}
+.btn{
+    background: red;
+    color: white;
+    border-radius: 10px;
+    padding: 6px 32px 6px 32px;
 }
