--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -9,22 +9,20 @@
             <form>
 
                 <div class="input-group my-4 px-5">
-                    <input type="text" class="form-control" 
-                        aria-label="Recipient's username" >
+                    <input type="text" class="form-control" placeholder="Correo">
                 </div>
                 <div class="input-group my-4 px-5">
-                    <input type="password" class="form-control" 
-                        aria-label="Recipient's username" >
+                    <input type="password" class="form-control" placeholder="Contraseña">
                 </div>
-                <div  id="forgotPassword" class="px-5">
+                <div id="forgotPassword" class="px-5 pt-3">
                     <span>
                         <a href="#">¿Olvidaste tu contraseña?</a>
                     </span>
                 </div>
-                
+
 
                 <div class="container-login100-form-btn m-t-17">
-                    <button class="login100-form-btn" type="submit">
+                    <button class="btn mt-5" type="submit">
                         Ingresar
                     </button>
                 </div>
