--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid animated fadeInLeft">
     <div id="loginBox" class="row text-center ">
-        <div id="contentLogin" class="col-lg">
-            <h1 id="titleLogin" class="">iniciar Sesión</h1>
+        <div id="contentLogin" class="col-lg shadow-lg rounded">
+            <h1 id="titleLogin" class="">Iniciar Sesión</h1>
             <picture>
                 <img id="logoLadrillera" class="img-fluid" src="../../../assets/Logo.png" alt="Logo Ladrillera 21">
             </picture>
@@ -32,6 +32,11 @@
                 </div>
 
             </form>
+        </div>
+    </div>
+    <div class="row fixed-bottom text-center">
+        <div  class="col-lg">
+            <h3 id="copyright">Ladrillera 21 © Derechos Reservados 2020</h3>
         </div>
     </div>
 </div>
