--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -1,1 +1,36 @@
-<h1>ESOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO</h1>
+<div class="container-fluid">
+    <div class="row">
+        <div id="containerNav" class="col-lg-12">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand px-5 py-3" href="#">
+                    <img src="../../../assets/Logo.png" width="150" height="60" class="d-inline-block align-top" alt="" loading="lazy">
+                  </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active pr-3">
+                      <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item px-3">
+                      <a class="nav-link" href="#">Clientes</a>
+                    </li>
+                    <li class="nav-item px-3">
+                      <a class="nav-link" href="#">Pedidos</a>
+                    </li>
+                    <li class="nav-item px-3">
+                        <a class="nav-link" href="#">Finanzas</a>
+                      </li>
+                      <li class="nav-item px-3">
+                        <a class="nav-link" href="#">Despacho</a>
+                      </li>
+                  </ul>
+                  <span class="navbar-text">
+                    Navbar text with an inline element
+                  </span>
+                </div>
+              </nav>
+        </div>
+    </div>
+</div>
