--- a/src/app/Pages/home/home.component.css
+++ b/src/app/Pages/home/home.component.css
@@ -2,3 +2,31 @@
     padding-right: 0px;
     padding-left: 0px;
 }
+
+
+#userLogo{
+    border: 1px solid rgb(170, 167, 167);
+    border-radius: 50px;
+    padding: 3px;
+}
+
+
+.dropdown-menu{
+    min-width: 13rem;
+}
+.dropdown-submenu:active .dropdown-menu{
+    display: flex;
+    flex-direction: column;
+}
+.dropdown-submenu:hover .dropdown-menu, .dropdown-submenu:focus .dropdown-menu{
+    display: flex;
+    flex-direction: column;
+}
+@media (max-width: 992px) {
+    .dropdown-menu{
+        width: 50%;
+    }
+    .dropdown-menu .dropdown-submenu{
+        width: auto;
+    }
+}
