--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -1,36 +1,64 @@
 <div class="container-fluid">
-    <div class="row">
-        <div id="containerNav" class="col-lg-12">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand px-5 py-3" href="#">
-                    <img src="../../../assets/Logo.png" width="150" height="60" class="d-inline-block align-top" alt="" loading="lazy">
-                  </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                  <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active pr-3">
-                      <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item px-3">
-                      <a class="nav-link" href="#">Clientes</a>
-                    </li>
-                    <li class="nav-item px-3">
-                      <a class="nav-link" href="#">Pedidos</a>
-                    </li>
-                    <li class="nav-item px-3">
-                        <a class="nav-link" href="#">Finanzas</a>
-                      </li>
-                      <li class="nav-item px-3">
-                        <a class="nav-link" href="#">Despacho</a>
-                      </li>
+  <div class="row">
+    <div id="containerNav" class="col-lg-12">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand px-5 py-3" href="#">
+          <img src="../../../assets/Logo.png" width="150" height="60" class="d-inline-block align-top" alt=""
+            loading="lazy">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+          aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active pr-3">
+              <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item px-3">
+              <a class="nav-link" href="#">Clientes</a>
+            </li>
+            <li class="nav-item px-3">
+              <a class="nav-link" href="#">Pedidos</a>
+            </li>
+            <li class="nav-item px-3">
+              <a class="nav-link" href="#">Finanzas</a>
+            </li>
+            <li class="nav-item px-3">
+              <a class="nav-link" href="#">Despacho</a>
+            </li>
+          </ul>
+        
+            <li class="nav-item dropdown navbar-text">
+              <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown link
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#">Something else here</a>
+                  <ul class="dropdown-menu">
+                    <a class="dropdown-item" href="#">A</a>
+                    <a class="dropdown-item" href="#">b</a>
                   </ul>
-                  <span class="navbar-text">
-                    Navbar text with an inline element
-                  </span>
-                </div>
-              </nav>
+                </li>
+
+                <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#">Something else here</a>
+                  <ul class="dropdown-menu">
+                    <a class="dropdown-item" href="#">A</a>
+                    <a class="dropdown-item" href="#">b</a>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            
+        
+          <picture>
+            <img id="userLogo" src="../../../assets/Iconos/people.svg" width="45" height="45" class="d-inline-block align-top mx-4" alt=""
+          loading="lazy">
+          </picture>
         </div>
+      </nav>
     </div>
+  </div>
 </div>
