--- a/src/app/Pages/home/home.component.css
+++ b/src/app/Pages/home/home.component.css
@@ -30,3 +30,32 @@
         width: auto;
     }
 }
+.list-group-item{
+    border-width: 0 0 0px;
+    padding: .25rem;
+}
+
+#icons, #titles{
+    vertical-align: middle;
+    display: inline-block;
+}
+
+.card{
+    border: none;
+    border-radius: 0 !important;
+    -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
+    -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
+    margin-left: 1px;
+    margin-right: 1px;
+}
+.list-group-item{
+    background: transparent;
+}
+.bg-secondary {
+    background-color: rgb(233, 232, 232)!important;
+
+}
+.card-columns{
+    column-count: 2;
+}
