--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="row">
+  <div class="row mb-2">
     <div id="containerNav" class="col-lg-12">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand px-5 py-3" href="#">
@@ -28,37 +28,148 @@
               <a class="nav-link" href="#">Despacho</a>
             </li>
           </ul>
-        
-            <li class="nav-item dropdown navbar-text">
-              <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown link
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#">Something else here</a>
-                  <ul class="dropdown-menu">
-                    <a class="dropdown-item" href="#">A</a>
-                    <a class="dropdown-item" href="#">b</a>
-                  </ul>
-                </li>
 
-                <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#">Something else here</a>
-                  <ul class="dropdown-menu">
-                    <a class="dropdown-item" href="#">A</a>
-                    <a class="dropdown-item" href="#">b</a>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-            
-        
+          <li class="nav-item dropdown navbar-text">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown link
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown"
+                  href="#">Something else here</a>
+                <ul class="dropdown-menu">
+                  <a class="dropdown-item" href="#">A</a>
+                  <a class="dropdown-item" href="#">b</a>
+                </ul>
+              </li>
+
+              <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown"
+                  href="#">Something else here</a>
+                <ul class="dropdown-menu">
+                  <a class="dropdown-item" href="#">A</a>
+                  <a class="dropdown-item" href="#">b</a>
+                </ul>
+              </li>
+            </ul>
+          </li>
+
+
           <picture>
-            <img id="userLogo" src="../../../assets/Iconos/people.svg" width="45" height="45" class="d-inline-block align-top mx-4" alt=""
-          loading="lazy">
+            <img id="userLogo" src="../../../assets/Iconos/people.svg" width="45" height="45"
+              class="d-inline-block align-top mx-4" alt="" loading="lazy">
           </picture>
         </div>
       </nav>
+    </div>
+  </div>
+  <div class="row">
+    <!--Col 1-->
+    <div class="col-5">
+      <div class="container">
+        <div class="row">
+         <div class="col-12">
+           <div class="card-columns">
+              <!--Col 1-->
+         
+            <div class="card  bg-secondary">
+              <div class="card-body">
+                <picture>
+                  <img id="icons" src="../../../assets/Iconos/partnership-handshake.svg" width="40" height="40"
+                    alt="handShake" class="mr-2">
+                </picture>
+                <h3 id="titles" class="mt-2">Clientes</h3>
+
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Cras justo odio</li>
+                  <li class="list-group-item">Dapibus ac facilisis in</li>
+                  <li class="list-group-item">Morbi leo risus</li>
+                  <li class="list-group-item">Porta ac consectetur ac</li>
+                  <li class="list-group-item">Vestibulum at eros</li>
+                  
+                </ul>
+
+              </div>
+            </div>
+          
+          <!--Col 1-->
+            <div  class="card  bg-secondary">
+              <div class="card-body">
+                <picture>
+                  <img id="icons" src="../../../assets/Iconos/partnership-handshake.svg" width="40" height="40"
+                    alt="handShake" class="mr-2">
+                </picture>
+                <h3 id="titles" class="mt-2">Clientes</h3>
+
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Cras justo odio</li>
+                  <li class="list-group-item">Dapibus ac facilisis in</li>
+                  <li class="list-group-item">Morbi leo risus</li>
+                  <li class="list-group-item">Porta ac consectetur ac</li>
+                  <li class="list-group-item">Vestibulum at eros</li>
+             
+                </ul>
+
+              </div>
+            </div>
+          <!--Col 1-->
+            <div class="card  bg-secondary">
+              <div class="card-body">
+                <picture>
+                  <img id="icons" src="../../../assets/Iconos/partnership-handshake.svg" width="40" height="40"
+                    alt="handShake" class="mr-2">
+                </picture>
+                <h3 id="titles" class="mt-2">Clientes</h3>
+
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Cras justo odio</li>
+                  <li class="list-group-item">Dapibus ac facilisis in</li>
+                  <li class="list-group-item">Morbi leo risus</li>
+                  <li class="list-group-item">Porta ac consectetur ac</li>
+                  <li class="list-group-item">Vestibulum at eros</li>
+                </ul>
+
+              </div>
+            </div>
+          <!--Col 1-->
+
+
+
+           </div>
+         </div>
+        </div>
+      </div>
+    </div>
+    <!--Col 2-->
+    <div class="col-7 fixed">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <!--Col 2-->
+            <div class="card bg-secondary mb-4">
+              <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                  <h1>Bioseguridad</h1>
+                  <p>No olvides siempre de llevar el tapabocas en todo momento</p>
+                  <footer class="blockquote-footer text-right">Actualización de Myryam Hernandez</footer>
+                </blockquote>
+              </div>
+            </div>
+            <!--Col 2-->
+            <div class="card bg-secondary mb-4">
+              <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                  <h1>Politica de privacidad y uso de Datos</h1>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut praesentium unde inventore dolore voluptate nam delectus, nesciunt ab, architecto itaque? Quisquam numquam placeat nisi blanditiis deserunt! Mollitia, quibusdam quod?</p>
+                  <footer class="blockquote-footer text-right">Actualización de Myryam Hernandez</footer>
+                </blockquote>
+              </div>
+            </div>
+            <!--Col 2-->
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
