--- a/src/app/Pages/home/home.component.css
+++ b/src/app/Pages/home/home.component.css
@@ -3,7 +3,11 @@
     padding-left: 0px;
 }
 
-
+#searchButton{
+    border: 1px solid rgb(170, 167, 167);
+    border-radius: 20px;
+    padding: 0px 15px 0px 15px;
+}
 #userLogo{
     border: 1px solid rgb(170, 167, 167);
     border-radius: 50px;
@@ -59,3 +63,4 @@
 .card-columns{
     column-count: 2;
 }
+
