--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -29,24 +29,32 @@
             </li>
           </ul>
 
-          <li class="nav-item dropdown navbar-text">
+          <li id="searchButton" class="nav-item dropdown navbar-text">
             <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown link
+              Buscar
             </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+            <ul class="dropdown-menu dropdown-menu-lg-right text-center" aria-labelledby="navbarDropdownMenuLink">
               <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown"
-                  href="#">Something else here</a>
+                  href="#">Clientes</a>
                 <ul class="dropdown-menu">
-                  <a class="dropdown-item" href="#">A</a>
-                  <a class="dropdown-item" href="#">b</a>
+                  <a class="dropdown-item" href="#">Crear cliente</a>
+                  <a class="dropdown-item" href="#">Ver cliente</a>
+                  <a class="dropdown-item" href="#">Modificar</a>
+                  <a class="dropdown-item" href="#">Eliminar*</a>
+                </ul>
+              </li>
+              <li><a class="dropdown-item" href="#">Pedidos</a></li>
+              <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown"
+                  href="#">Finanzas</a>
+                <ul class="dropdown-menu">
+                  <a class="dropdown-item" href="#">Adsadasd</a>
+                  <a class="dropdown-item" href="#">bssdasd</a>
                 </ul>
               </li>
 
               <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown"
-                  href="#">Something else here</a>
+                  href="#">Despacho</a>
                 <ul class="dropdown-menu">
                   <a class="dropdown-item" href="#">A</a>
                   <a class="dropdown-item" href="#">b</a>
@@ -64,80 +72,99 @@
       </nav>
     </div>
   </div>
+
+  <!--Main Content-->
+  <!--User Name-->
+  <div class="row mb-2">
+    <div class="col-12">
+      <h2>Hola, Sebastian.</h2>
+    </div>
+  </div>
+  <!--Modules-->
   <div class="row">
     <!--Col 1-->
     <div class="col-5">
       <div class="container">
         <div class="row">
-         <div class="col-12">
-           <div class="card-columns">
-              <!--Col 1-->
-         
-            <div class="card  bg-secondary">
-              <div class="card-body">
-                <picture>
-                  <img id="icons" src="../../../assets/Iconos/partnership-handshake.svg" width="40" height="40"
-                    alt="handShake" class="mr-2">
-                </picture>
-                <h3 id="titles" class="mt-2">Clientes</h3>
+          <div class="col-12">
+            <div class="card-columns">
+              <!--Card 1-->
 
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Cras justo odio</li>
-                  <li class="list-group-item">Dapibus ac facilisis in</li>
-                  <li class="list-group-item">Morbi leo risus</li>
-                  <li class="list-group-item">Porta ac consectetur ac</li>
-                  <li class="list-group-item">Vestibulum at eros</li>
-                  
-                </ul>
+              <div class="card  bg-secondary">
+                <div class="card-body">
+                  <picture>
+                    <img id="icons" src="../../../assets/Iconos/partnership-handshake.svg" width="40" height="40"
+                      alt="handShake" class="mr-2">
+                  </picture>
+                  <h3 id="titles" class="mt-2">Clientes</h3>
 
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Crear cliente</li>
+                    <li class="list-group-item">Ver clientes (CC/Todos)</li>
+                    <li class="list-group-item">Modificar</li>
+                    <li class="list-group-item">Eliminar*</li>
+                  </ul>
+
+                </div>
               </div>
-            </div>
-          
-          <!--Col 1-->
-            <div  class="card  bg-secondary">
-              <div class="card-body">
-                <picture>
-                  <img id="icons" src="../../../assets/Iconos/partnership-handshake.svg" width="40" height="40"
-                    alt="handShake" class="mr-2">
-                </picture>
-                <h3 id="titles" class="mt-2">Clientes</h3>
 
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Cras justo odio</li>
-                  <li class="list-group-item">Dapibus ac facilisis in</li>
-                  <li class="list-group-item">Morbi leo risus</li>
-                  <li class="list-group-item">Porta ac consectetur ac</li>
-                  <li class="list-group-item">Vestibulum at eros</li>
-             
-                </ul>
+              <!--Card 2-->
+              <div class="card  bg-secondary">
+                <div class="card-body">
+                  <picture>
+                    <img id="icons" src="../../../assets/Iconos/box.svg" width="40" height="40" alt="handShake"
+                      class="mr-2">
+                  </picture>
+                  <h3 id="titles" class="mt-2">Pedidos</h3>
 
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Crear Pedidos</li>
+                    <li class="list-group-item">Ver pedidos</li>
+                    <li class="list-group-item">Ver reportes</li>
+                    <li class="list-group-item">Modificar pedidos</li>
+                    <li class="list-group-item">Eliminar pedidos</li>
+
+                  </ul>
+
+                </div>
               </div>
-            </div>
-          <!--Col 1-->
-            <div class="card  bg-secondary">
-              <div class="card-body">
-                <picture>
-                  <img id="icons" src="../../../assets/Iconos/partnership-handshake.svg" width="40" height="40"
-                    alt="handShake" class="mr-2">
-                </picture>
-                <h3 id="titles" class="mt-2">Clientes</h3>
+              <!--Card 3-->
+              <div class="card  bg-secondary">
+                <div class="card-body">
+                  <picture>
+                    <img id="icons" src="../../../assets/Iconos/money.svg" width="40" height="40" alt="handShake"
+                      class="mr-2">
+                  </picture>
+                  <h3 id="titles" class="mt-2">Finanzas</h3>
 
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Cras justo odio</li>
-                  <li class="list-group-item">Dapibus ac facilisis in</li>
-                  <li class="list-group-item">Morbi leo risus</li>
-                  <li class="list-group-item">Porta ac consectetur ac</li>
-                  <li class="list-group-item">Vestibulum at eros</li>
-                </ul>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Ver pedidos</li>
+                    <li class="list-group-item">Generar reportes</li>
+                    <li class="list-group-item">Validar pedido</li>
+                  </ul>
 
+                </div>
               </div>
+              <!--Card 4-->
+              <div class="card  bg-secondary">
+                <div class="card-body">
+                  <picture>
+                    <img id="icons" src="../../../assets/Iconos/new.svg" width="40" height="40" alt="handShake"
+                      class="mr-2">
+                  </picture>
+                  <h3 id="titles" class="mt-2">Despacho</h3>
+
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Generar sticker</li>
+                    <li class="list-group-item">Ver pedido pendiente</li>
+                    <li class="list-group-item">Despachar pedido</li>
+                  </ul>
+
+                </div>
+              </div>
+              <!--Cards End-->
             </div>
-          <!--Col 1-->
-
-
-
-           </div>
-         </div>
+          </div>
         </div>
       </div>
     </div>
@@ -161,7 +188,18 @@
               <div class="card-body">
                 <blockquote class="blockquote mb-0">
                   <h1>Politica de privacidad y uso de Datos</h1>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut praesentium unde inventore dolore voluptate nam delectus, nesciunt ab, architecto itaque? Quisquam numquam placeat nisi blanditiis deserunt! Mollitia, quibusdam quod?</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut praesentium unde inventore dolore
+                    voluptate nam delectus, nesciunt ab, architecto itaque? Quisquam numquam placeat nisi blanditiis
+                    deserunt! Mollitia, quibusdam quod? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Molestias, beatae porro voluptatem vel velit amet minima laborum consectetur autem quas eligendi
+                    unde voluptatum atque ipsa, dolore iste impedit aliquam commodi!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis incidunt architecto atque
+                    cupiditate harum laboriosam sapiente nihil corrupti iure, neque cumque amet laudantium possimus,
+                    autem earum eligendi nulla dolor officia! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Corporis provident, nam nesciunt necessitatibus unde eligendi! Ducimus, aliquid aliquam sed
+                    praesentium exercitationem explicabo rem, placeat veniam, voluptatem culpa temporibus. Velit,
+                    facere!
+                  </p>
                   <footer class="blockquote-footer text-right">Actualización de Myryam Hernandez</footer>
                 </blockquote>
               </div>
