Cambio layout tamaños columnas

--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -83,7 +83,7 @@
   <!--Modules-->
   <div class="row">
     <!--Col 1-->
-    <div class="col-5">
+    <div class="col-md-12 col-lg-6 ">
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -169,7 +169,7 @@
       </div>
     </div>
     <!--Col 2-->
-    <div class="col-7 fixed">
+    <div class="cols-md-12 col-lg-6 fixed">
       <div class="container">
         <div class="row">
           <div class="col-12">
