--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -16,7 +16,7 @@
               <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item px-3">
-              <a class="nav-link" href="#">Clientes</a>
+              <a routerLink="/createEmployees" class="nav-link" href="#">Clientes</a>
             </li>
             <li class="nav-item px-3">
               <a class="nav-link" href="#">Pedidos</a>
@@ -38,7 +38,7 @@
               <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown"
                   href="#">Clientes</a>
                 <ul class="dropdown-menu">
-                  <a class="dropdown-item" href="#">Crear cliente</a>
+                  <a routerLink="/createEmployees" class="dropdown-item" href="#">Crear cliente</a>
                   <a class="dropdown-item" href="#">Ver cliente</a>
                   <a class="dropdown-item" href="#">Modificar</a>
                   <a class="dropdown-item" href="#">Eliminar*</a>
@@ -99,7 +99,7 @@
                   <h3 id="titles" class="mt-2">Clientes</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Crear cliente</li>
+                    <li routerLink="/createEmployees" class="list-group-item">Crear cliente</li>
                     <li class="list-group-item">Ver clientes (CC/Todos)</li>
                     <li class="list-group-item">Modificar</li>
                     <li class="list-group-item">Eliminar*</li>
