--- a/src/app/Pages/create-employees/create-employees.component.html
+++ b/src/app/Pages/create-employees/create-employees.component.html
@@ -16,7 +16,7 @@
                             <a routerLink="/home" class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active px-3">
-                            <a class="nav-link" href="#">Clientes</a>
+                            <a class="nav-link" href="#">Empleados</a>
                         </li>
                         <li class="nav-item px-3">
                             <a class="nav-link" href="#">Pedidos</a>
@@ -37,10 +37,10 @@
                         <ul class="dropdown-menu dropdown-menu-lg-right text-center"
                             aria-labelledby="navbarDropdownMenuLink">
                             <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle"
-                                    data-toggle="dropdown" href="#">Clientes</a>
+                                    data-toggle="dropdown" href="#">Empleados</a>
                                 <ul class="dropdown-menu">
-                                    <a class="dropdown-item" href="#">Crear cliente</a>
-                                    <a class="dropdown-item" href="#">Ver cliente</a>
+                                    <a class="dropdown-item" href="#">Crear Empleado</a>
+                                    <a class="dropdown-item" href="#">Ver Empleado</a>
                                     <a class="dropdown-item" href="#">Modificar</a>
                                     <a class="dropdown-item" href="#">Eliminar*</a>
                                 </ul>
