--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -16,7 +16,7 @@
               <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item px-3">
-              <a routerLink="/createEmployees" class="nav-link" href="#">Clientes</a>
+              <a routerLink="/createEmployees" class="nav-link" href="#">Empleados</a>
             </li>
             <li class="nav-item px-3">
               <a class="nav-link" href="#">Pedidos</a>
@@ -36,10 +36,10 @@
             </a>
             <ul class="dropdown-menu dropdown-menu-lg-right text-center" aria-labelledby="navbarDropdownMenuLink">
               <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown"
-                  href="#">Clientes</a>
+                  href="#">Empleados</a>
                 <ul class="dropdown-menu">
-                  <a routerLink="/createEmployees" class="dropdown-item" href="#">Crear cliente</a>
-                  <a class="dropdown-item" href="#">Ver cliente</a>
+                  <a routerLink="/createEmployees" class="dropdown-item" href="#">Crear Empleado</a>
+                  <a class="dropdown-item" href="#">Ver Empleado</a>
                   <a class="dropdown-item" href="#">Modificar</a>
                   <a class="dropdown-item" href="#">Eliminar*</a>
                 </ul>
@@ -96,11 +96,11 @@
                     <img id="icons" src="../../../assets/Iconos/partnership-handshake.svg" width="40" height="40"
                       alt="handShake" class="mr-2">
                   </picture>
-                  <h3 id="titles" class="mt-2">Clientes</h3>
+                  <h3 id="titles" class="mt-2">Empleados</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li routerLink="/createEmployees" class="list-group-item">Crear cliente</li>
-                    <li class="list-group-item">Ver clientes (CC/Todos)</li>
+                    <li routerLink="/createEmployees" class="list-group-item">Crear Empleado</li>
+                    <li class="list-group-item">Ver Empleados (CC/Todos)</li>
                     <li class="list-group-item">Modificar</li>
                     <li class="list-group-item">Eliminar*</li>
                   </ul>
