--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -2,8 +2,8 @@
   <div class="row mb-2">
     <div id="containerNav" class="col-lg-12">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand px-5 py-3" href="#">
-          <img src="../../../assets/Logo.png" width="150" height="60" class="d-inline-block align-top" alt=""
+        <a class="navbar-brand px-5 py-2" href="#">
+          <img src="../../../assets/Logo.png" width="100" height="mr-auto" class="d-inline-block align-top" alt=""
             loading="lazy">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
@@ -99,7 +99,7 @@
                   <h3 id="titles" class="mt-2">Empleados</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li routerLink="/createEmployees" class="list-group-item">Crear Empleado</li>
+                    <li class="list-group-item"><a href="/createEmployees">Crear Empleado</a></li>
                     <li class="list-group-item">Ver Empleados (CC/Todos)</li>
                     <li class="list-group-item">Modificar</li>
                     <li class="list-group-item">Eliminar*</li>
