--- a/src/app/Pages/create-employees/create-employees.component.html
+++ b/src/app/Pages/create-employees/create-employees.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <!--Left Menu starts-->
-        <div id="leftMenu" class="col-2 text-left">
+        <div id="leftMenu" class="col-md-12 col-lg-2 text-left">
             <ul class="list-group list-group-flush">
 
                 <li id="titles" class="list-group-item">
@@ -20,7 +20,7 @@
                     <a class=".text-wrap" href="#">
                         <img src="../../../assets/Iconos/noun_Pencil_2135274.svg" width="30" height="30"
                             class="d-inline-block align-top" alt="" loading="lazy">
-                        Modificar 
+                        Modificar
                     </a></li>
                 <li id="titles" class="list-group-item">
                     <a class=".text-wrap" href="#">
@@ -32,22 +32,22 @@
         </div>
         <!--Left Menu Ends-->
         <!--Main Content Starts-->
-        <div class="col-10">
+        <div class="col-md-12 col-lg-10">
 
             <div class="verticalCenter">
                 <div id="containerBox" class="container animated fadeInRight ">
-                    <div id="loginBox" class="row text-center ">
-                        <div id="contentLogin" class="col-lg shadow-lg rounded">
-                            <h1 id="titleLogin" class="">Registrar empleado</h1>
+                    <div id="createEmployeeBox" class="row text-center ">
+                        <div id="contentCreateEmployee" class="col-lg shadow-lg rounded">
+                            <h1 id="titleCreateEmployee" class="titles">Registrar empleado</h1>
                             <form class="">
                                 <div class="input-group mb-4 px-5">
                                     <div class="form-row align-items-center">
                                         <div class="col-6 my-1">
-                                            <input type="text" name="Nombre" required class="form-control"
+                                            <input type="text" name="nombre" required class="form-control"
                                                 placeholder="Nombres">
                                         </div>
                                         <div class="col-6 my-1">
-                                            <input type="text" name="Apellidos" required class="form-control"
+                                            <input type="text" name="apellidos" required class="form-control"
                                                 placeholder="Apellidos">
                                         </div>
                                     </div>
@@ -56,34 +56,47 @@
                                     <input type="mail" minlength="3" name="email" required email class="form-control"
                                         placeholder="Correo">
                                 </div>
+
+
                                 <div class="input-group mb-4 px-5">
                                     <div class="form-row align-items-center">
-                                        <div class="col-4 my-1">
-                                            <label class="mr-sm-2 sr-only"
-                                                for="inlineFormCustomSelect">Preference</label>
-                                            <select class="form-control" id="inlineFormCustomSelect">
-                                                <option selected>C.C.</option>
-                                                <option value="1">One</option>
-                                                <option value="2">Two</option>
-                                                <option value="3">Three</option>
-                                            </select>
+                                        <div class="col-3 my-1">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text" id="basic-addon1">C.C.</span>
+                                            </div>
                                         </div>
-                                        <div class="col-8 my-1">
+                                        <div class="col-9 my-1">
                                             <input type="text" minlength="11" name="text" required class="form-control"
                                                 placeholder="XXXXXXXXX">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="input-group mb-4 px-5">
-                                    <input type="text" minlength="3" name="Telefono" required email class="form-control"
+                                    <input type="text" minlength="3" name="telefono" required email class="form-control"
                                         placeholder="Telefono">
                                 </div>
                                 <div class="input-group mb-4 px-5">
                                     <select class="form-control">
-                                        <option>Rol</option>
+                                        <option value="">Rol</option>
+                                        <option value="developer">Developer</option>
                                     </select>
                                 </div>
-                                <div class="container-login100-form-btn m-t-17">
+
+                                <div class="form-check form-check-inline">
+                                    <div class="custom-control custom-switch">
+                                        <input type="checkbox" class="custom-control-input" id="ventas">
+                                        <label class="custom-control-label" for="ventas">Ventas</label>
+                                    </div>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <div class="custom-control custom-switch">
+                                        <input type="checkbox" class="custom-control-input" id="pedidos">
+                                        <label class="custom-control-label" for="pedidos">pedidos</label>
+                                    </div>
+                                </div>
+
+
+                                <div class="">
                                     <button class="btn mt-5" type="submit">
                                         Continuar
                                     </button>
