--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -3,7 +3,7 @@
   <!--User Name-->
   <div class="row mb-2">
     <div class="col-12">
-      <h2>Hola, Sebastian.</h2>
+      <h2 class="titles">Hola, Sebastian.</h2>
     </div>
   </div>
   <!--Modules-->
@@ -22,13 +22,13 @@
                     <img id="icons" src="../../../assets/Iconos/partnership-handshake.svg" width="40" height="40"
                       alt="handShake" class="mr-2">
                   </picture>
-                  <h3 id="titles" class="mt-2">Empleados</h3>
+                  <h3 id="titles" class="mt-2 titles ">Empleados</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li routerLink="/createEmployees" class="list-group-item">Crear Empleado</li>
-                    <li routerLink="/createEmployees" class="list-group-item">Ver Empleados (CC/Todos)</li>
-                    <li routerLink="/createEmployees" class="list-group-item">Modificar</li>
-                    <li routerLink="/createEmployees" class="list-group-item">Eliminar*</li>
+                    <li routerLink="/createEmployees" class="list-group-item titles ">Crear Empleado</li>
+                    <li routerLink="/createEmployees" class="list-group-item titles">Ver Empleados (CC/Todos)</li>
+                    <li routerLink="/createEmployees" class="list-group-item titles">Modificar</li>
+                    <li routerLink="/createEmployees" class="list-group-item titles">Eliminar*</li>
                   </ul>
 
                 </div>
@@ -41,14 +41,14 @@
                     <img id="icons" src="../../../assets/Iconos/box.svg" width="40" height="40" alt="handShake"
                       class="mr-2">
                   </picture>
-                  <h3 id="titles" class="mt-2">Pedidos</h3>
+                  <h3 id="titles" class="mt-2 titles">Pedidos</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Crear Pedidos</li>
-                    <li class="list-group-item">Ver pedidos</li>
-                    <li class="list-group-item">Ver reportes</li>
-                    <li class="list-group-item">Modificar pedidos</li>
-                    <li class="list-group-item">Eliminar pedidos</li>
+                    <li class="list-group-item titles">Crear Pedidos</li>
+                    <li class="list-group-item titles">Ver pedidos</li>
+                    <li class="list-group-item titles">Ver reportes</li>
+                    <li class="list-group-item titles">Modificar pedidos</li>
+                    <li class="list-group-item titles">Eliminar pedidos</li>
 
                   </ul>
 
@@ -61,12 +61,12 @@
                     <img id="icons" src="../../../assets/Iconos/money.svg" width="40" height="40" alt="handShake"
                       class="mr-2">
                   </picture>
-                  <h3 id="titles" class="mt-2">Finanzas</h3>
+                  <h3 id="titles" class="mt-2 titles">Finanzas</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Ver pedidos</li>
-                    <li class="list-group-item">Generar reportes</li>
-                    <li class="list-group-item">Validar pedido</li>
+                    <li class="list-group-item titles">Ver pedidos</li>
+                    <li class="list-group-item titles">Generar reportes</li>
+                    <li class="list-group-item titles">Validar pedido</li>
                   </ul>
 
                 </div>
@@ -78,12 +78,12 @@
                     <img id="icons" src="../../../assets/Iconos/new.svg" width="40" height="40" alt="handShake"
                       class="mr-2">
                   </picture>
-                  <h3 id="titles" class="mt-2">Despacho</h3>
+                  <h3 id="titles" class="mt-2 titles">Despacho</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Generar sticker</li>
-                    <li class="list-group-item">Ver pedido pendiente</li>
-                    <li class="list-group-item">Despachar pedido</li>
+                    <li class="list-group-item titles">Generar sticker</li>
+                    <li class="list-group-item titles">Ver pedido pendiente</li>
+                    <li class="list-group-item titles">Despachar pedido</li>
                   </ul>
 
                 </div>
@@ -103,9 +103,9 @@
             <div class="card bg-secondary mb-4">
               <div class="card-body">
                 <blockquote class="blockquote mb-0">
-                  <h1>Bioseguridad</h1>
-                  <p>No olvides siempre de llevar el tapabocas en todo momento</p>
-                  <footer class="blockquote-footer text-right">Actualización de Myryam Hernandez</footer>
+                  <h1 class="titles">Bioseguridad</h1>
+                  <p class="text">No olvides siempre de llevar el tapabocas en todo momento</p>
+                  <footer class="blockquote-footer text-right text">Actualización de Myryam Hernandez</footer>
                 </blockquote>
               </div>
             </div>
@@ -113,8 +113,8 @@
             <div class="card bg-secondary mb-4">
               <div class="card-body">
                 <blockquote class="blockquote mb-0">
-                  <h1>Politica de privacidad y uso de Datos</h1>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut praesentium unde inventore dolore
+                  <h1 class="titles">Politica de privacidad y uso de Datos</h1>
+                  <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut praesentium unde inventore dolore
                     voluptate nam delectus, nesciunt ab, architecto itaque? Quisquam numquam placeat nisi blanditiis
                     deserunt! Mollitia, quibusdam quod? Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Molestias, beatae porro voluptatem vel velit amet minima laborum consectetur autem quas eligendi
@@ -126,7 +126,7 @@
                     praesentium exercitationem explicabo rem, placeat veniam, voluptatem culpa temporibus. Velit,
                     facere!
                   </p>
-                  <footer class="blockquote-footer text-right">Actualización de Myryam Hernandez</footer>
+                  <footer class="blockquote-footer text-right text">Actualización de Myryam Hernandez</footer>
                 </blockquote>
               </div>
             </div>
