--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid">
-  <div class="row mb-2">
+  <!--Nav Bar starts-->
+  <div *ngIf="token" class="row mb-2">
     <div id="containerNav" class="col-lg-12">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand px-5 py-3" href="#">
@@ -13,52 +14,52 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item  pr-3">
-              <a routerLink="/home" routerLinkActive="active" class="nav-link" href="#">Inicio <span
+              <a routerLink="/home" routerLinkActive="active" class="nav-link titles" href="#">Inicio <span
                   class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item px-3">
-              <a routerLink="/createEmployees" routerLinkActive="active" class="nav-link" href="#">Empleados</a>
+              <a routerLink="/createEmployees" routerLinkActive="active" class="nav-link titles" href="#">Empleados</a>
             </li>
             <li class="nav-item px-3">
-              <a routerLink="/home" routerLinkActive="active" class="nav-link" href="#">Pedidos</a>
+              <a routerLink="/home" routerLinkActive="active" class="nav-link titles" href="#">Pedidos</a>
             </li>
             <li class="nav-item px-3">
-              <a routerLink="/home" routerLinkActive="active" class="nav-link" href="#">Finanzas</a>
+              <a routerLink="/home" routerLinkActive="active" class="nav-link titles" href="#">Finanzas</a>
             </li>
             <li class="nav-item px-3">
-              <a routerLink="/home" routerLinkActive="active" class="nav-link" href="#">Despacho</a>
+              <a routerLink="/home" routerLinkActive="active" class="nav-link titles" href="#">Despacho</a>
             </li>
           </ul>
 
           <li id="searchButton" class="nav-item dropdown navbar-text">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink"
+            <a class="nav-link dropdown-toggle titles" href="http://example.com" id="navbarDropdownMenuLink"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Buscar
             </a>
             <ul class="dropdown-menu dropdown-menu-lg-right text-center" aria-labelledby="navbarDropdownMenuLink">
-              <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown"
+              <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle titles" data-toggle="dropdown"
                   href="#">Empleados</a>
                 <ul class="dropdown-menu">
-                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item" href="#">Crear Empleado</a>
-                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item" href="#">Ver Empleado</a>
-                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item" href="#">Modificar</a>
-                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item" href="#">Eliminar*</a>
+                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles" href="#">Crear Empleado</a>
+                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles" href="#">Ver Empleado</a>
+                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles" href="#">Modificar</a>
+                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles" href="#">Eliminar*</a>
                 </ul>
               </li>
-              <li><a class="dropdown-item" href="#">Pedidos</a></li>
-              <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown"
+              <li><a class="dropdown-item titles" href="#">Pedidos</a></li>
+              <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle titles" data-toggle="dropdown"
                   href="#">Finanzas</a>
                 <ul class="dropdown-menu">
-                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item" href="#">Finanzas</a>
-                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item" href="#">Registro</a>
+                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles" href="#">Finanzas</a>
+                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles" href="#">Registro</a>
                 </ul>
               </li>
 
-              <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown"
+              <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle titles" data-toggle="dropdown"
                   href="#">Despacho</a>
                 <ul class="dropdown-menu">
-                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item" href="#">A</a>
-                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item" href="#">b</a>
+                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles" href="#">A</a>
+                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles" href="#">b</a>
                 </ul>
               </li>
             </ul>
@@ -73,8 +74,9 @@
       </nav>
     </div>
   </div>
+  <!--Nav Bar ends-->
   <div class="row">
-    <div class="col-lg-12">
+    <div id="router" class="col-lg-12">
       <router-outlet></router-outlet>
     </div>
   </div>
