--- a/src/app/Pages/create-employees/create-employees.component.css
+++ b/src/app/Pages/create-employees/create-employees.component.css
@@ -49,7 +49,7 @@
     display: flex;
     justify-content:center ;
     background: rgb(233, 232, 232);
-    height: 35rem;
+    height:100%;
     width: 30rem;
     border-radius: 10px;
 }
