Servicio de administrador

--- a/src/app/Pages/create-employees/create-employees.component.html
+++ b/src/app/Pages/create-employees/create-employees.component.html
@@ -117,7 +117,7 @@
                                 <div class="form-check form-check-inline">
                                     <div class="custom-control custom-switch">
                                         <input type="checkbox" class="custom-control-input" id="pedidos">
-                                        <label class="custom-control-label titles" for="pedidos">pedidos</label>
+                                        <label class="custom-control-label titles" for="pedidos">Pedidos</label>
                                     </div>
                                 </div>
 
