--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -9,7 +9,7 @@
   <!--Modules-->
   <div class="row">
     <!--Col 1-->
-    <div class="col-md-12 col-lg-6 ">
+    <div class="col-md-12 col-lg-6 mb-3">
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -25,10 +25,10 @@
                   <h3 id="titles" class="mt-2 titles ">Empleados</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li routerLink="/createEmployees" class="list-group-item titles ">Crear Empleado</li>
-                    <li routerLink="/createEmployees" class="list-group-item titles">Ver Empleados (CC/Todos)</li>
-                    <li routerLink="/createEmployees" class="list-group-item titles">Modificar</li>
-                    <li routerLink="/createEmployees" class="list-group-item titles">Eliminar*</li>
+                    <li class="list-group-item titles"><a routerLink="/createEmployees" href="#">Crear Empleado</a></li>
+                    <li class="list-group-item titles"><a routerLink="/createEmployees" href="#">Ver Empleados (CC/Todos)</a></li>
+                    <li class="list-group-item titles"><a routerLink="/createEmployees" href="">Modificar</a></li>
+                    <li class="list-group-item titles"><a routerLink="/createEmployees" href="">Eliminar*</a></li>
                   </ul>
 
                 </div>
@@ -44,11 +44,11 @@
                   <h3 id="titles" class="mt-2 titles">Pedidos</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item titles">Crear Pedidos</li>
-                    <li class="list-group-item titles">Ver pedidos</li>
-                    <li class="list-group-item titles">Ver reportes</li>
-                    <li class="list-group-item titles">Modificar pedidos</li>
-                    <li class="list-group-item titles">Eliminar pedidos</li>
+                    <li class="list-group-item titles"><a href="">Crear Pedidos</a> </li>
+                    <li class="list-group-item titles"><a href="">Ver pedidos</a> </li>
+                    <li class="list-group-item titles"><a href="">Ver reportes</a> </li>
+                    <li class="list-group-item titles"><a href="">Modificar pedidos</a> </li>
+                    <li class="list-group-item titles"><a href="">Eliminar pedidos</a> </li>
 
                   </ul>
 
@@ -64,9 +64,9 @@
                   <h3 id="titles" class="mt-2 titles">Finanzas</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item titles">Ver pedidos</li>
-                    <li class="list-group-item titles">Generar reportes</li>
-                    <li class="list-group-item titles">Validar pedido</li>
+                    <li class="list-group-item titles"><a href="">Ver pedidos</a> </li>
+                    <li class="list-group-item titles"><a href="">Generar reportes</a> </li>
+                    <li class="list-group-item titles"><a href="">Validar pedido</a> </li>
                   </ul>
 
                 </div>
@@ -78,12 +78,12 @@
                     <img id="icons" src="../../../assets/Iconos/new.svg" width="40" height="40" alt="handShake"
                       class="mr-2">
                   </picture>
-                  <h3 id="titles" class="mt-2 titles">Despacho</h3>
+                  <h3 id="titles" class="mt-2 titles card-title">Despacho</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item titles">Generar sticker</li>
-                    <li class="list-group-item titles">Ver pedido pendiente</li>
-                    <li class="list-group-item titles">Despachar pedido</li>
+                    <li class="list-group-item titles"><a href="">Generar sticker</a> </li>
+                    <li class="list-group-item titles"><a href="">Ver pedido pendiente</a> </li>
+                    <li class="list-group-item titles"><a href="">Despachar pedido</a> </li>
                   </ul>
 
                 </div>
