--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <!--Nav Bar starts-->
-  <div *ngIf="token" class="row">
+  <div *ngIf="tokenActive" class="row">
     <div id="containerNav" class="col-lg-12">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand px-5 py-2" href="#">
