Guards de acceso, manejo de sesion, duración y cierre de sesion

--- a/src/app/Pages/create-employees/create-employees.component.html
+++ b/src/app/Pages/create-employees/create-employees.component.html
@@ -99,12 +99,12 @@
 
                                 <div class="input-group mb-4 px-5">
                                     <input type="mail" [(ngModel)]="usuario.email" minlength="3" name="email" required
-                                        email class="form-control" placeholder="Correo">
+                                         class="form-control" placeholder="Correo">
                                 </div>
 
 
                                 <div class="input-group mb-4 px-5">
-                                    <input type="password" minlength="3" name="password" required email class="form-control"
+                                    <input type="password" minlength="3" name="password" required  class="form-control"
                                         placeholder="Password">
                                 </div>
 
