--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,9 @@
             <li class="nav-item px-3">
               <a routerLink="/home" routerLinkActive="active" class="nav-link titles" href="#">Despacho</a>
             </li>
+            <li class="nav-item px-3">
+              <a (click)="logOut()" class="nav-link titles text-danger" href="#">Cerrar Sesión</a>
+            </li>
           </ul>
 
           <li id="searchButton" class="nav-item dropdown navbar-text">
